# lab-django-superheroes-2023-1113

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yaml
docker/: Dockerfile
src/: manage.py  settings.py  urls.py
src/heroes/: admin.py  apis.py  apps.py  models.py  services.py
src/heroes/migrations/: 0001_initial.py  0002_remove_hero_power_hero_alias_hero_description_and_more.py
src/villains/: admin.py  apis.py  apps.py  models.py
src/villains/migrations/: 0001_initial.py  0002_remove_villain_power_villain_alias_and_more.py
src/villians/: apps.py
src/web/: asgi.py  settings.py  urls.py  wsgi.py
src/web/settings/: base.py
